fix horizontal scrollbar issue

--- a/src/Components/Organisms/Carrousel/Carrousel.css
+++ b/src/Components/Organisms/Carrousel/Carrousel.css
@@ -1,4 +1,10 @@
 .carrousel {
-  transition: transform 0.3s ease-in-out;
+  max-width: 100vw;
+  display: grid;
+  overflow: hidden;
+}
+
+.carrousel__inner {
+  transition: transform 0.5s ease-in-out;
   display: flex;
 }
